﻿----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2006-04-12 Marc Delisle  <lem9@users.sourceforge.net>
    * export.php: bug #1443004 part 1: do not generate INSERT statements
      for an exported VIEW

2006-04-12 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * css/phpmyadmin.css.php:
      fixed bug #1446017 red border in outdated themes
    * libraries/common.lib.php:
       - added option to PMA_arrayWalkRecursive() to use function also on keys
       - un-magic_quotes_gpc also keys in GPC arrays
    * libraries/db_table_exists.lib.php:
      cleanup - what a mess; fixed several undefined variables
    * tbl_printview.php:
      fixed undefined variable by including libraries/tbl_properties_common.php
    * changelog.php:
      link users, files, bugs, rfes and patches
    * libraries/footer.inc.php:
      fixed bug #1454874 Javascript error in new (not framed) print window
    * css/phpmyadmin.css.php, scripts/setup.php, test/theme.php
      themes/darkblue_orange/css/theme_right.css.php,
      themes/original/css/theme_right.css.php:
      fixed bug #1444466 theme directory not being processed correctly
    * libraries/common.lib.php, libraries/Theme_Manager.class.php:
      fixed bug #1469174 configuration changes not accepted in theme manager
    * libraries/Theme_Manager.class.php:
      fixed bug #1469120 missing property in Theme_Manager class
    * libraries/common.lib.php:
      fixed bug #1469109 PMA_backquote() issues

2006-04-11 Marc Delisle  <lem9@users.sourceforge.net>
    * Documentation.html: clarification about config.default.php

2006-04-11 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * tbl_relation.php:
      fixed bug #1459418 Add foreign key fail on column with ' in name
    * index.php, libraries/auth/cookie.auth.lib.php,
      libraries/auth/http.auth.lib.php, libraries/common.lib.php,
      libraries/footer.inc.php, libraries/fpdf/fpdf.php,